# Hardware-aware-algorithm

./: CMakeLists.txt  Makefile  README.md  run.cu  run.cuh
include/: cpuLib.h  cudaLib.cuh
src/: CMakeLists.txt  Makefile  cmake_install.cmake  cpuLib.cpp  cudaLib.cu
